fixed spacings

--- a/apps/web/src/components/DottedBreak/DottedBreak.module.scss
+++ b/apps/web/src/components/DottedBreak/DottedBreak.module.scss
@@ -5,6 +5,7 @@
 
   &.vertical {
     flex-direction: column;
+    width: auto;
   }
 
   &.black {
