--- a/apps/web/src/components/Testimonial/Testimonial.module.scss
+++ b/apps/web/src/components/Testimonial/Testimonial.module.scss
@@ -81,6 +81,7 @@
 
   .rightWrapper {
     display: flex;
+    gap: 32px;
     .text {
       color: var(--color-2);
       font-family: 'PP Neue Machina';
